[tool.poetry]
name = "api.symengine.github.io"
version = "0.1.0"
description = "Symengine Doxygen-Sphinx API Setup"
authors = ["Rohit Goswami <rgoswami@ieee.org>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
exhale = "^0.2.3"
breathe = "^4.20.0"
myst-nb = "^0.10.1"
coverxygen = "^1.5.0"
sphinx-copybutton = "^0.3.0"
sphinx-togglebutton = "^0.2.2"
sphinxcontrib-bibtex = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
